btn issue in mobile fixed by giving position realative and z-index- 100

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16916,3 +16916,11 @@ ul {
   color: var(--bs-dark);
   background-color: var(--bs-white);
 }/*# sourceMappingURL=styles.css.map */
+
+/* Fix for button being unclickable on mobile */
+@media (max-width: 767px) {
+  .hero-cta-link {
+    position: relative;
+    z-index: 100;
+  }
+}
